--- a/test/fixtures/grades.yml
+++ b/test/fixtures/grades.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  student_id: 1
   assignment_name: MyString
   grade: MyString
 
 two:
+  student_id: 2
   assignment_name: MyString
   grade: MyString
