--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -1,15 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  parent_id: 1
-  grade_id: 1
+  teacher_id: 1
   name: MyString
   email: MyString
   password_digest: MyString
 
 two:
-  parent_id: 1
-  grade_id: 1
+  teacher_id: 2
   name: MyString
   email: MyString
   password_digest: MyString
